Scrambler funcional aunque glitchea

--- a/file_API.html
+++ b/file_API.html
@@ -9,7 +9,7 @@
 <body>
     <h1>file_API.js</h1>
 
-    <button id="loadButton" onclick="loadSong()">Load</button>
+    <button id="loadButton" onclick="test_Directorios()">Load</button>
     <button id="otroButton" onclick="asyncSong()">otro</button>
 <audio id="audio"></audio>
 <br><br>
