Audio Worklet no Funciona

--- a/step_10.html
+++ b/step_10.html
@@ -1480,6 +1480,11 @@ var sampler = new Tone.Sampler({
             <button id="player_1_loadButton" value="player_1" onclick="load_Local(value)">Load local </button>
             <button id="player_1_scramblerButton" value="player_1" onclick="scramble(value)">Scrambler </button>
             <br>
+            <input class="checkbox" type="checkbox" name="player_1_scrambler_checkbox"
+              id="player_1_scrambler_checkbox">Scrambler
+
+
+            <br>
             <p id="player_1_load_text"></p>
             <p id="player_1_duration_value"> </p>
             <br>
