on key down very incomplete

--- a/step_1.0.html
+++ b/step_1.0.html
@@ -151,8 +151,9 @@
         <br>
         <button id="consoleClear" onclick="consoleClear()"> consoleClear </button>
         <button id="Sinte" onclick="Sinte()"> Sinte </button>
-        <button id="CustomizedButton" onclick="CustomizedButton()"> Boton a customizar</button>
+        <button id="CustomizedButton" onclick="CustomizedButton()"> Muestra array</button>
         <button id="TransportSTOP" onclick="TransportSTOP()"> Transport STOP </button>
+        <button id="offlineContext" onclick="Offline_Context()"> Offline Context </button>
         <button id="save_txt_file" onclick="saveFile()">Save File </button>
       </section>
     </fieldset>
