try to use tone context w W A A context

--- a/step_1.0.html
+++ b/step_1.0.html
@@ -127,12 +127,18 @@
       <button id="various_loads" onclick="multiLoad()">Load</button>
 
       <br> <br>
-
-      Sacado de: https://github.com/drnoir/soundTrigger/blob/main/record.js
-      <!-- https://github.com/drnoir/soundTrigger/blob/main/record.js -->
       <section class="container">
+      
+        <br> <br>
+RECORDER JS
+      <br> <br>
+<button id="startRecording">Record</button>
+      <br> <br>
 
         <h3>Record</h3>
+      Sacado de: https://github.com/drnoir/soundTrigger/blob/main/record.js
+      <br> <br>
+
         <button id="start-record">(X)Start Recording</button>
         <button id="stop-record">(X)Stop Recording</button>
         <div>
