--- a/step_1.0.html
+++ b/step_1.0.html
@@ -11,6 +11,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" href="img/html.ico" type="image/x-icon">
   <title>STEP 1.0 4 Columns and 2 Rows Layout</title>
   <style>
     body {
