offline context 2nd try

--- a/step_1.0.html
+++ b/step_1.0.html
@@ -128,6 +128,11 @@
       <button id="various_loads" onclick="multiLoad()">Load</button>
 
       <br> <br>
+        <audio id="myAudio4">
+          <source src="" type="audio/wav" id="">
+        </audio>
+      <br> <br>
+
       <section class="container">
 
         <br> <br>
@@ -137,8 +142,6 @@
         <audio id="audioForRecorderjs">
           <source src="" type="audio/wav" id="">
         </audio>
-
-
 
         <button id="Recording" onclick="Recording()">Record</button>
         <br> <br>
