LoadMix player volume + playBackrate

--- a/step_1.0.html
+++ b/step_1.0.html
@@ -114,7 +114,6 @@
     Test_Node RMS: <p id="meter_test_Node_RMS"></p>
     <br>
     <p id="teclaApretada"> Tecla: </p>
-
     <fieldset>
       Play Simultaneos
       <input type="checkbox" name="source_1" id="multiple_play_source_1" value="source_1"> 1
@@ -134,7 +133,6 @@
       <br> <br>
 
       <section class="container">
-
         <br> <br>
         RECORDER JS
         <br> <br>
@@ -171,6 +169,7 @@
         <button id="CustomizedButton" onclick="CustomizedButton()"> Muestra array</button>
         <button id="TransportSTOP" onclick="TransportSTOP()"> Transport STOP </button>
         <button id="offlineContext" onclick="Offline_Context()"> Offline Context </button>
+        <button id="load_txt_file" onclick="getFile()">Load File </button>
         <button id="save_txt_file" onclick="saveFile()">Save File </button>
       </section>
     </fieldset>
