FUNCTIONAL step1.15 + step_15

--- a/step_1.15.html
+++ b/step_1.15.html
@@ -169,6 +169,7 @@
 
       <section class="container">
         <br>
+        <!--
         RECORDER JS
         <br>
         Audio Tag para usar recorder.js
@@ -178,14 +179,15 @@
 
         <button id="Recording" onclick="Recording()">Record</button>
         <br>
-
-        <h3>Record</h3>
-        Sacado de: https://github.com/drnoir/soundTrigger/blob/main/record.js
+-->
+        <!--      <h3>Record</h3>
+       Sacado de: https://github.com/drnoir/soundTrigger/blob/main/record.js
+   -->
         <br>
-
-        <button id="start-record">(X)Start Recording</button>
-        <button id="stop-record">(X)Stop Recording</button>
         <div>
+          <button id="start-record">(X)Start Recording</button>
+          <button id="stop-record">(X)Stop Recording</button>
+
           <h3>Playback</h3>
           <audio id="audio-playback" controls></audio>
         </div>
@@ -202,7 +204,7 @@
         <button id="consoleClear" onclick="consoleClear()"> consoleClear </button>
         <button id="Sinte" onclick="Sinte()"> Sinte </button>
         <button id="CustomizedButton" onclick="CustomizedButton()"> Start Context</button>
-        <button id="TransportSTOP" onclick="TransportSTOP()"> Transport STOP </button>
+        <button id="TransportSTOP" onclick="TransportSTOP()"> Load Mix </button>
         <button id="offlineContext" onclick="Offline_Context()"> Offline Context </button>
         <button id="load_txt_file" onclick="getFile()">Load File </button>
         <button id="save_txt_file" onclick="saveFile()">Save File </button>
