--- a/step_1.15.html
+++ b/step_1.15.html
@@ -207,11 +207,16 @@
         <div>
           <button id="start-record">(X)Start Recording</button>
           <button id="stop-record">(X)Stop Recording</button>
-
           Playback
           <audio id="audio-playback" controls></audio>
+          <br> 
+          <p>Recorded Time:</p>       
+        <p id="Recorded_Time_value"> </p>
         </div>
         <br>
+
+        <br>
+
         <fieldset>
           <legend> Transport</legend>
           <br>
