--- a/noads.html
+++ b/noads.html
@@ -14,8 +14,8 @@
 <body>
     <div class="contenedor">
         <header class="header"> 
-             <input type='text' id='carpeta' name="nombre" placeholder="Paste iframe here" size="50" />
-            <button id="play_btn" onclick="cargarLink()">Aceptar</button>
+             <input type='text' id='carpeta' name="nombre" placeholder="Paste link here" style="height: 40px; line-height: 60px;" size="150" />
+            <button id="play_btn" onclick="cargarLink()" >Aceptar</button>
         </header>
         <main class="main">
             <br>
