--- a/noads.html
+++ b/noads.html
@@ -13,22 +13,38 @@
 
 <body>
     <div class="contenedor">
-        <header class="header"> 
-             <input type='text' id='carpeta' name="nombre" placeholder="Paste link here" style="height: 40px; line-height: 60px;" size="150" />
-            <button id="play_btn" onclick="cargarLink()" >Aceptar</button>
+        <header class="header">
+            <input type='text' id='carpeta' name="nombre" placeholder="Paste link here"
+                style="height: 40px; line-height: 60px;" size="150" />
+            <button id="play_btn" onclick="cargarLink()">Aceptar</button>
         </header>
         <main class="main">
             <br>
-            <iframe id="frame" width="260" height="115" title="YouTube video player" frameborder="4"
-            enablejsapi="true"
+            <iframe id="frame" width="260" height="115" title="YouTube video player" frameborder="4" enablejsapi="true"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <br>
+
+
+            <div id="embedded-page"></div>
+
+
+
         </main>
         <sidebar class="sidebar" id="sidebar_derecha">
             Links
             <div class="playlist" id="playlist">
-           </div>
+            </div>
         </sidebar>
     </div>
     <script src="js/noads.js"></script>
+    <script>
+  const container = document.getElementById('embedded-page');
+  const iframe = document.createElement('iframe');
+  iframe.src = 'https://google.com';
+  iframe.style.width = '600px';
+  iframe.style.height = '400px';
+  container.appendChild(iframe);
+</script>
 </body>
+
 </html>
