--- a/step_1.15.html
+++ b/step_1.15.html
@@ -401,6 +401,22 @@ loop
       <br>
     </fieldset>
   </header>
+<!--
+<figure>
+  <figcaption>Get browser details using <code>navigator</code>.</figcaption>
+  <pre>
+function NavigatorExample() {
+  let txt = `Browser CodeName: ${navigator.appCodeName};\n`;
+  txt += `Browser Name: ${navigator.appName};\n`;
+  txt += `Browser Version: ${navigator.appVersion};\n`;
+  txt += `Cookies Enabled: ${navigator.cookieEnabled};\n`;
+  txt += `Platform: ${navigator.platform};\n`;
+  txt += `User-agent header: ${navigator.userAgent};`;
+  console.log("NavigatorExample", txt);
+}
+  </pre>
+</figure>
+-->
 
   <!--Follower-->
   <div id="channel_1_Follower_div">
