carpeta video eliminada, revisar codigo

--- a/step_1.15.html
+++ b/step_1.15.html
@@ -184,7 +184,7 @@
 
       <br>
       <audio id="myAudio4">
-        <source src="" type="audio/wav" id="">
+        <source src="" type="audio/wav">
       </audio>
 
       <section class="container">
