noads scroll modification

--- a/step_1.15.html
+++ b/step_1.15.html
@@ -42,7 +42,7 @@
     }
 
     header {
-      position: sticky;
+      /*position: sticky;*/
       top: 0;
       grid-column: span 4;
       /* Header spans across all 4 columns */
